fix: avoid horizontal scroll

--- a/src/app/shared/layouts/header/header.component.scss
+++ b/src/app/shared/layouts/header/header.component.scss
@@ -1,7 +1,6 @@
 :host {
   position: fixed;
   top: 0;
-  width: 100vw;
 }
 
 mat-toolbar {
